lowercase all the things
- Update some of the integration tests to match the current style of
doing things
[Finishes #141641191]

Signed-off-by: Matthew Boedicker <mboedicker@pivotal.io>

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -28,10 +28,6 @@
     "translation": ""
   },
   {
-    "id": "API version:",
-    "translation": "API version:"
-  },
-  {
     "id": "APPS",
     "translation": "APPS"
   },
@@ -82,10 +78,6 @@
   {
     "id": "Before getting started:",
     "translation": "Before getting started:"
-  },
-  {
-    "id": "Buildpack:",
-    "translation": ""
   },
   {
     "id": "CANCELING",
@@ -1324,10 +1316,6 @@
     "translation": "Incorrect usage: invalid healthcheck type"
   },
   {
-    "id": "Instances:",
-    "translation": ""
-  },
-  {
     "id": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint",
     "translation": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint"
   },
@@ -1354,10 +1342,6 @@
   {
     "id": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information.",
     "translation": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information."
-  },
-  {
-    "id": "Last uploaded:",
-    "translation": ""
   },
   {
     "id": "List all isolation segments",
@@ -1393,10 +1377,6 @@
   },
   {
     "id": "Name to give the task (generated if omitted)",
-    "translation": ""
-  },
-  {
-    "id": "Name:",
     "translation": ""
   },
   {
@@ -1552,10 +1532,6 @@
     "translation": "Repository: "
   },
   {
-    "id": "Requested state:",
-    "translation": ""
-  },
-  {
     "id": "Resource matching API timed out; pushing all app files.",
     "translation": ""
   },
@@ -1582,10 +1558,6 @@
   {
     "id": "Route {{.HostName}}.{{.DomainName}}/{{.Path}} {{.Existence}}",
     "translation": "Route {{.HostName}}.{{.DomainName}}/{{.Path}} {{.Existence}}"
-  },
-  {
-    "id": "Routes:",
-    "translation": ""
   },
   {
     "id": "Run a one-off task on an app",
@@ -1668,15 +1640,7 @@
     "translation": "Space management:"
   },
   {
-    "id": "Stack:",
-    "translation": ""
-  },
-  {
     "id": "Start app timeout\n\nTIP: Application must be listening on the right port. Instead of hard coding the port, use the $PORT environment variable.\n\nUse '{{.BinaryName}} logs {{.AppName}} --recent' for more information",
-    "translation": ""
-  },
-  {
-    "id": "Start command:",
     "translation": ""
   },
   {
@@ -1704,8 +1668,8 @@
     "translation": "Tags: {{.Tags}}"
   },
   {
-    "id": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}",
-    "translation": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}"
+    "id": "Task has been submitted successfully for execution.",
+    "translation": ""
   },
   {
     "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
@@ -2084,6 +2048,14 @@
     "translation": ""
   },
   {
+    "id": "api endpoint:",
+    "translation": ""
+  },
+  {
+    "id": "api version:",
+    "translation": ""
+  },
+  {
     "id": "apps:",
     "translation": ""
   },
@@ -2136,6 +2108,14 @@
     "translation": ""
   },
   {
+    "id": "endpoint (for http type):",
+    "translation": ""
+  },
+  {
+    "id": "health check type:",
+    "translation": ""
+  },
+  {
     "id": "integer",
     "translation": ""
   },
@@ -2176,6 +2156,10 @@
     "translation": "repo-plugins"
   },
   {
+    "id": "routes:",
+    "translation": ""
+  },
+  {
     "id": "run-task",
     "translation": ""
   },
@@ -2204,11 +2188,27 @@
     "translation": ""
   },
   {
+    "id": "space:",
+    "translation": ""
+  },
+  {
     "id": "sso-passcode",
     "translation": ""
   },
   {
+    "id": "start command:",
+    "translation": ""
+  },
+  {
     "id": "start time",
+    "translation": ""
+  },
+  {
+    "id": "task id:",
+    "translation": ""
+  },
+  {
+    "id": "task name:",
     "translation": ""
   },
   {
@@ -2229,6 +2229,10 @@
   },
   {
     "id": "user {{.User}} already exists",
+    "translation": ""
+  },
+  {
+    "id": "user:",
     "translation": ""
   },
   {
