--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -24,10 +24,6 @@
     "translation": ""
   },
   {
-    "id": "API version:",
-    "translation": "API version:"
-  },
-  {
     "id": "All available CLI commands",
     "translation": "All available CLI commands"
   },
@@ -62,10 +58,6 @@
   {
     "id": "Before getting started:",
     "translation": "Before getting started:"
-  },
-  {
-    "id": "Buildpack:",
-    "translation": ""
   },
   {
     "id": "CANCELING",
@@ -912,10 +904,6 @@
     "translation": "Incorrect usage: invalid healthcheck type"
   },
   {
-    "id": "Instances:",
-    "translation": ""
-  },
-  {
     "id": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint",
     "translation": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint"
   },
@@ -944,10 +932,6 @@
     "translation": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information."
   },
   {
-    "id": "Last uploaded:",
-    "translation": ""
-  },
-  {
     "id": "List all isolation segments",
     "translation": ""
   },
@@ -969,10 +953,6 @@
   },
   {
     "id": "Name to give the task (generated if omitted)",
-    "translation": ""
-  },
-  {
-    "id": "Name:",
     "translation": ""
   },
   {
@@ -1128,10 +1108,6 @@
     "translation": "Repository: "
   },
   {
-    "id": "Requested state:",
-    "translation": ""
-  },
-  {
     "id": "Resource matching API timed out; pushing all app files.",
     "translation": ""
   },
@@ -1150,10 +1126,6 @@
   {
     "id": "Route and domain management:",
     "translation": "Route and domain management:"
-  },
-  {
-    "id": "Routes:",
-    "translation": ""
   },
   {
     "id": "Run a one-off task on an app",
@@ -1212,15 +1184,7 @@
     "translation": "Space management:"
   },
   {
-    "id": "Stack:",
-    "translation": ""
-  },
-  {
     "id": "Start app timeout\n\nTIP: Application must be listening on the right port. Instead of hard coding the port, use the $PORT environment variable.\n\nUse '{{.BinaryName}} logs {{.AppName}} --recent' for more information",
-    "translation": ""
-  },
-  {
-    "id": "Start command:",
     "translation": ""
   },
   {
@@ -1244,8 +1208,8 @@
     "translation": ""
   },
   {
-    "id": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}",
-    "translation": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}"
+    "id": "Task has been submitted successfully for execution.",
+    "translation": ""
   },
   {
     "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
@@ -1616,6 +1580,14 @@
     "translation": ""
   },
   {
+    "id": "api endpoint:",
+    "translation": ""
+  },
+  {
+    "id": "api version:",
+    "translation": ""
+  },
+  {
     "id": "apps:",
     "translation": ""
   },
@@ -1676,6 +1648,14 @@
     "translation": ""
   },
   {
+    "id": "endpoint (for http type):",
+    "translation": ""
+  },
+  {
+    "id": "health check type:",
+    "translation": ""
+  },
+  {
     "id": "host",
     "translation": "host"
   },
@@ -1728,6 +1708,10 @@
     "translation": "repo-plugins"
   },
   {
+    "id": "routes:",
+    "translation": ""
+  },
+  {
     "id": "run-task",
     "translation": ""
   },
@@ -1756,6 +1740,10 @@
     "translation": ""
   },
   {
+    "id": "space:",
+    "translation": ""
+  },
+  {
     "id": "sso-passcode",
     "translation": ""
   },
@@ -1764,7 +1752,19 @@
     "translation": "stack:"
   },
   {
+    "id": "start command:",
+    "translation": ""
+  },
+  {
     "id": "start time",
+    "translation": ""
+  },
+  {
+    "id": "task id:",
+    "translation": ""
+  },
+  {
+    "id": "task name:",
     "translation": ""
   },
   {
@@ -1789,6 +1789,10 @@
   },
   {
     "id": "user {{.User}} already exists",
+    "translation": ""
+  },
+  {
+    "id": "user:",
     "translation": ""
   },
   {
