--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -28,10 +28,6 @@
     "translation": ""
   },
   {
-    "id": "API version:",
-    "translation": "API version:"
-  },
-  {
     "id": "APP_INSTANCES",
     "translation": "APP_INSTANCES"
   },
@@ -78,10 +74,6 @@
   {
     "id": "Before getting started:",
     "translation": "Before getting started:"
-  },
-  {
-    "id": "Buildpack:",
-    "translation": ""
   },
   {
     "id": "CANCELING",
@@ -1316,10 +1308,6 @@
     "translation": "Incorrect usage: invalid healthcheck type"
   },
   {
-    "id": "Instances:",
-    "translation": ""
-  },
-  {
     "id": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint",
     "translation": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint"
   },
@@ -1346,10 +1334,6 @@
   {
     "id": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information.",
     "translation": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information."
-  },
-  {
-    "id": "Last uploaded:",
-    "translation": ""
   },
   {
     "id": "List all isolation segments",
@@ -1385,10 +1369,6 @@
   },
   {
     "id": "Name to give the task (generated if omitted)",
-    "translation": ""
-  },
-  {
-    "id": "Name:",
     "translation": ""
   },
   {
@@ -1536,10 +1516,6 @@
     "translation": "Removing entitlement to isolation segment {{.SegmentName}} from org {{.OrgName}} as {{.CurrentUser}}..."
   },
   {
-    "id": "Requested state:",
-    "translation": ""
-  },
-  {
     "id": "Resource matching API timed out; pushing all app files.",
     "translation": ""
   },
@@ -1558,10 +1534,6 @@
   {
     "id": "Route and domain management:",
     "translation": "Route and domain management:"
-  },
-  {
-    "id": "Routes:",
-    "translation": ""
   },
   {
     "id": "Run a one-off task on an app",
@@ -1620,15 +1592,7 @@
     "translation": "Space management:"
   },
   {
-    "id": "Stack:",
-    "translation": ""
-  },
-  {
     "id": "Start app timeout\n\nTIP: Application must be listening on the right port. Instead of hard coding the port, use the $PORT environment variable.\n\nUse '{{.BinaryName}} logs {{.AppName}} --recent' for more information",
-    "translation": ""
-  },
-  {
-    "id": "Start command:",
     "translation": ""
   },
   {
@@ -1656,8 +1620,8 @@
     "translation": "TOTAL_MEMORY"
   },
   {
-    "id": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}",
-    "translation": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}"
+    "id": "Task has been submitted successfully for execution.",
+    "translation": ""
   },
   {
     "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
@@ -2036,6 +2000,10 @@
     "translation": ""
   },
   {
+    "id": "api version:",
+    "translation": ""
+  },
+  {
     "id": "apps:",
     "translation": ""
   },
@@ -2088,6 +2056,14 @@
     "translation": ""
   },
   {
+    "id": "endpoint (for http type):",
+    "translation": ""
+  },
+  {
+    "id": "health check type:",
+    "translation": ""
+  },
+  {
     "id": "integer",
     "translation": ""
   },
@@ -2112,10 +2088,6 @@
     "translation": "name:"
   },
   {
-    "id": "org:",
-    "translation": ""
-  },
-  {
     "id": "ports",
     "translation": ""
   },
@@ -2126,6 +2098,10 @@
   {
     "id": "repo-plugins",
     "translation": "repo-plugins"
+  },
+  {
+    "id": "routes:",
+    "translation": ""
   },
   {
     "id": "run-task",
@@ -2160,7 +2136,19 @@
     "translation": ""
   },
   {
+    "id": "start command:",
+    "translation": ""
+  },
+  {
     "id": "start time",
+    "translation": ""
+  },
+  {
+    "id": "task id:",
+    "translation": ""
+  },
+  {
+    "id": "task name:",
     "translation": ""
   },
   {
