--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -236,10 +236,6 @@
     "translation": "API 端点: {{.Endpoint}}"
   },
   {
-    "id": "API version:",
-    "translation": ""
-  },
-  {
     "id": "APPS",
     "translation": "应用程序"
   },
@@ -534,10 +530,6 @@
   {
     "id": "Buildpack {{.BuildpackName}} does not exist.",
     "translation": "Buildpack {{.BuildpackName}} 不存在。"
-  },
-  {
-    "id": "Buildpack:",
-    "translation": ""
   },
   {
     "id": "Byte quantity must be an integer with a unit of measurement like M, MB, G, or GB",
@@ -2452,10 +2444,6 @@
     "translation": "正在启用对空间 '{{.SpaceName}}' 的 SSH 支持..."
   },
   {
-    "id": "Endpoint (for http type):",
-    "translation": "Endpoint (for http type):"
-  },
-  {
     "id": "Endpoint deprecated",
     "translation": ""
   },
@@ -3172,10 +3160,6 @@
     "translation": "Health check type must be 'http' to set a health check HTTP endpoint."
   },
   {
-    "id": "Health check type:",
-    "translation": "health_check_type is {{.HealthCheckType}}"
-  },
-  {
     "id": "Hostname (e.g. my-subdomain)",
     "translation": "主机名（例如，my-subdomain）"
   },
@@ -3480,10 +3464,6 @@
     "translation": "实例必须为非负整数"
   },
   {
-    "id": "Instances:",
-    "translation": ""
-  },
-  {
     "id": "Invalid JSON response from server",
     "translation": "来自服务器的 JSON 响应无效"
   },
@@ -3618,10 +3598,6 @@
   {
     "id": "Last Operation",
     "translation": "上次操作"
-  },
-  {
-    "id": "Last uploaded:",
-    "translation": ""
   },
   {
     "id": "List all apps in the target space",
@@ -3873,10 +3849,6 @@
   },
   {
     "id": "Name to give the task (generated if omitted)",
-    "translation": ""
-  },
-  {
-    "id": "Name:",
     "translation": ""
   },
   {
@@ -4640,10 +4612,6 @@
     "translation": "请求伪 tty 分配"
   },
   {
-    "id": "Requested state:",
-    "translation": ""
-  },
-  {
     "id": "Requires SOURCE-APP TARGET-APP as arguments",
     "translation": "需要 SOURCE-APP TARGET-APP 作为自变量"
   },
@@ -4786,10 +4754,6 @@
   {
     "id": "Routes for this domain will be configured only on the specified router group",
     "translation": "仅在指定的路由器组上配置此域的路径"
-  },
-  {
-    "id": "Routes:",
-    "translation": ""
   },
   {
     "id": "Rules",
@@ -5184,10 +5148,6 @@
     "translation": "要使用的堆栈（堆栈是一种可以运行应用程序的预构建文件系统，包括操作系统）"
   },
   {
-    "id": "Stack:",
-    "translation": ""
-  },
-  {
     "id": "Staging Environment Variable Groups:",
     "translation": "编译打包环境变量组: "
   },
@@ -5201,10 +5161,6 @@
   },
   {
     "id": "Start app timeout\n\nTIP: Application must be listening on the right port. Instead of hard coding the port, use the $PORT environment variable.\n\nUse '{{.BinaryName}} logs {{.AppName}} --recent' for more information",
-    "translation": ""
-  },
-  {
-    "id": "Start command:",
     "translation": ""
   },
   {
@@ -5328,7 +5284,7 @@
     "translation": "目标空间 {{.SpaceName}}\n"
   },
   {
-    "id": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}",
+    "id": "Task has been submitted successfully for execution.",
     "translation": ""
   },
   {
@@ -6200,6 +6156,14 @@
     "translation": "已存在"
   },
   {
+    "id": "api endpoint:",
+    "translation": ""
+  },
+  {
+    "id": "api version:",
+    "translation": ""
+  },
+  {
     "id": "app",
     "translation": "应用程序"
   },
@@ -6356,6 +6320,10 @@
     "translation": "已启用"
   },
   {
+    "id": "endpoint (for http type):",
+    "translation": ""
+  },
+  {
     "id": "env var '{{.PropertyName}}' should not be null",
     "translation": "环境变量 '{{.PropertyName}}' 不应为空"
   },
@@ -6374,6 +6342,10 @@
   {
     "id": "free or paid",
     "translation": "免费或付费"
+  },
+  {
+    "id": "health check type:",
+    "translation": ""
   },
   {
     "id": "health_check_type is ",
@@ -6592,6 +6564,10 @@
     "translation": "路径"
   },
   {
+    "id": "routes:",
+    "translation": ""
+  },
+  {
     "id": "run-task",
     "translation": ""
   },
@@ -6676,6 +6652,10 @@
     "translation": "空间配额: "
   },
   {
+    "id": "space:",
+    "translation": ""
+  },
+  {
     "id": "spaces:",
     "translation": "空间: "
   },
@@ -6728,6 +6708,10 @@
     "translation": "堆栈: "
   },
   {
+    "id": "start command:",
+    "translation": ""
+  },
+  {
     "id": "start time",
     "translation": ""
   },
@@ -6750,6 +6734,14 @@
   {
     "id": "stopped after 1 redirect",
     "translation": "在执行 1 次重定向后已停止"
+  },
+  {
+    "id": "task id:",
+    "translation": ""
+  },
+  {
+    "id": "task name:",
+    "translation": ""
   },
   {
     "id": "tasks",
@@ -6818,6 +6810,10 @@
   {
     "id": "user-provided",
     "translation": "用户提供的项"
+  },
+  {
+    "id": "user:",
+    "translation": ""
   },
   {
     "id": "username",
