only display tip on NoAppDetectedErrors
[Finishes #142209141]

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1236,6 +1236,10 @@
     "translation": ""
   },
   {
+    "id": "Error staging application: {{.Message}}",
+    "translation": ""
+  },
+  {
     "id": "Error staging application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
     "translation": "Error staging application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks."
   },
