--- a/cf/i18n/resources/ko-kr.all.json
+++ b/cf/i18n/resources/ko-kr.all.json
@@ -2696,6 +2696,10 @@
     "translation": "Manifest 저장 중에 오류 발생: {{.Error}}"
   },
   {
+    "id": "Error staging application: {{.Message}}",
+    "translation": ""
+  },
+  {
     "id": "Error staging application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
     "translation": ""
   },
