--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -2696,6 +2696,10 @@
     "translation": "保存清单时出错: {{.Error}}"
   },
   {
+    "id": "Error staging application: {{.Message}}",
+    "translation": ""
+  },
+  {
     "id": "Error staging application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
     "translation": ""
   },
